change to reactive java